k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stb-bank
  labels:
    app.kubernetes.io/part-of: stb-bank
